# cookiecutter-tkinter-app-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: pyproject.toml  setup.py
{{cookiecutter.project_slug}}/docs/: INSTALL.md  README.md  USAGE.md
{{cookiecutter.project_slug}}/src/: requirements.txt
{{cookiecutter.project_slug}}/src/gui/: main_window.py
